# LTD

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md  edufile.txt
apps/: CMakeLists.txt
apps/fleXdLoggerServer/: CMakeLists.txt  ChangeLog  ChangeLog.md  ReadMe.md
apps/fleXdLoggerServer/gtest/: CMakeLists.txt  ChangeLog.md  FleXdAppArrayTest.cpp  FleXdApplicationTest.cpp  FleXdLogMessageTest.cpp  FleXdLoggerServerTest.cpp  main.cpp
apps/fleXdLoggerServer/inc/: AppArray.h  Application.h  Connector.h  FleXdAppArray.h  FleXdApplication.h  FleXdConnector.h  FleXdLogMessage.h  FleXdLoggerIPC.h  FleXdLoggerIPCServer.h  FleXdLoggerServer.h  LogMessage.h  Logger.h  MessageType.h  iSocServer.h
apps/fleXdLoggerServer/src/: AppArray.cpp  Application.cpp  Connector.cpp  FleXdAppArray.cpp  FleXdApplication.cpp  FleXdConnector.cpp  FleXdLogMessage.cpp  FleXdLoggerIPC.cpp  FleXdLoggerIPCServer.cpp  FleXdLoggerServer.cpp  LogMessage.cpp  Logger.cpp  iSocServer.cpp  mainFleXdLogger.cpp  mainLogger.cpp
libs/: CMakeLists.txt
libs/fleXdLoggerClient/: CMakeLists.txt  ChangeLog  ChangeLog.md  ReadMe.md  fleXdLoggerClient.pc.in
libs/fleXdLoggerClient/example/: CMakeLists.txt  main.cpp
libs/fleXdLoggerClient/gtest/: CMakeLists.txt  FleXdLogBufferTest.cpp  FleXdLogStreamTest.cpp  FleXdLoggerTest.cpp  main.cpp
libs/fleXdLoggerClient/inc/: FleXdLogBuffer.h  FleXdLogStream.h  FleXdLoggerIPCClient.h  iSocClient.h
libs/fleXdLoggerClient/inc/public/: FleXdLogger.h  FleXdLoggerClient.h
libs/fleXdLoggerClient/src/: FleXdLogBuffer.cpp  FleXdLogStream.cpp  FleXdLogger.cpp  FleXdLoggerIPCClient.cpp  iSocClient.cpp  main.cpp
libs/fleXdLoggerCommon/: CMakeLists.txt  Makefile  cmake_install.cmake
libs/fleXdLoggerCommon/inc/public/: FleXdLogStream.h  FleXdMessageType.h  MessageType.h
libs/fleXdLoggerDlt/: CMakeLists.txt  ChangeLog  fleXdLoggerDlt.pc.in
libs/fleXdLoggerDlt/inc/public/: FleXdLoggerDlt.h
libs/fleXdLoggerDlt/src/: FleXdLoggerDlt.cpp
